tests/compile/no_setters.stderr
error[E0599]: no method named `set_b` found for struct `MyBools` in the current scope
  --> tests/compile/no_setters.rs:14:7
   |
3  | #[pack_bools(no_set)]
   | --------------------- method `set_b` not found for this struct
...
14 |     x.set_b(true);
   |       ^^^^^
   |
help: there is a method `get_b` with a similar name, but with different arguments
  --> tests/compile/no_setters.rs:3:1
   |
3  | #[pack_bools(no_set)]
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pack_bools` (in Nightly builds, run with -Z macro-backtrace for more info)
